# mini-eval-project

./: .env  .gitignore  README.md  app.py  config.py  models.py  pyproject.toml
app/: config.py  database.py  main.py  models.py
app/core/: evaluator.py  security.py
app/routers/: auth.py  datasets.py  models.py  tasks.py
app/static/: script.js  style.css
app/templates/: index.html  login.html  task_detail.html
