[project]
name = "mini-eval-project"
version = "0.1.0"
description = "Local LLM Evaluation System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.22",
    "aiomysql>=0.2.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
    "aiohttp>=3.10.5",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
]
